kubernetes-yaml/edu-erp-odoo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-pod-name
  labels:
    app: client-pod-name
spec:
  containers:
    - name: client-pod-name
      image: client-odoo-image-name
      securityContext:
        runAsUser: 0
      ports:
        - containerPort: 8069
      volumeMounts:
      - mountPath: /etc/odoo
        name: odoo-pv
        subPath: config
      - mountPath: /opt
        name: odoo-pv
        subPath: addons
      - mountPath: /var/lib/odoo/filestore/client-db-name
        name: odoo-pv
        subPath: filestore
  volumes:
  - name: odoo-pv
    persistentVolumeClaim:
      claimName: clinet-pvc-name
