kubernetes-yaml/edu-erp-odoo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service-name
spec:
  selector:
    app: client-pod-name
  ports:
    - protocol: TCP
      port: 8069
      targetPort: 8069
