kubernetes-yaml/edu-erp-odoo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-ingress-name
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: client-host-name
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: client-service-name
            port:
              number: 8069
